--- a/test/scss/all-test.css
+++ b/test/scss/all-test.css
@@ -53,10 +53,10 @@ html {
 }
 
 :root {
-  wrap-width: 100%;
+  --wrap-width: 100%;
 }
 
-.wrap, [class^="wrap-"], [class*=" wrap-"] {
+[class^="wrap-"], [class*=" wrap-"] {
   margin-right: auto;
   margin-left: auto;
   max-width: var(--wrap-width);
